Fixed stretching issue when image element resizing. Improved the way the image element show the controls
git-svn-id: https://aux1.edublogs.org/repos/incsub/trunk/themes/upfront@13559 f53fe46e-8c02-459b-9fdd-93e75771b278

--- a/elements/upfront-image/css/uimage.css
+++ b/elements/upfront-image/css/uimage.css
@@ -993,7 +993,7 @@ div.uimage-controls i.upfront-icon:before {
 
 .uimage-small .uimage-controls {
 	top: auto;
-	margin-top: 15px;
+	bottom: 10px;
 }
 
 .uimage-small .upfront-inline-panel-item {
